# world-model

./: .gitignore  HANDOVER.md  NOTES.md  README.md  REQUIREMENTS_INTELLIGENCE_THRESHOLD.md  analyze_sparsity.py  demo_constraint_satisfaction.py  demo_cross_domain.py  demo_decay.py  demo_digits.py  demo_imputation.py  demo_integrated.py  demo_iris.py  demo_letters.py  demo_letters_hierarchical.py  demo_lineage_query.py  demo_lod_classification.py  demo_mvp.py  demo_promotion_earns_keep.py  demo_pruning.py  demo_satlib.py  demo_sequential_cross_domain.py  demo_smooth_promotion.py  demo_two_tendencies.py  extract_observations.py  extract_profile.py  pyproject.toml  requirements.txt  test_arena.py  test_content_addressed_ids.py  test_coparenting.py  test_correctness_veto.py  test_federation_parent_merge.py  test_lindblad_cross_link.py  test_lindblad_equilibrate.py  test_lineage.py  test_lod.py  test_obs_dedup.py  test_open_roster.py  test_reseed.py  (+4 more)
api/: __init__.py  main.py
data/: andrei_adversarial.json  andrei_profile.json  andrei_world_model.json  observations.json  training_log.json
docs/: FORMALIZATION.md  README.md  THEORY.md  api-reference.md  architecture.md  attention-README.md  attention.md  concepts.md  development.md  future-digital-twin.md  novelty-README.md  substrate-architecture.md  training.md  wikidata-integration.md
experiments/: README.md
scripts/: extract_from_tweets.py  extract_voice_only.py  test_moltbook_agent.py
tests/: test_attention.py  test_firestore.py  test_harness.py  test_hierarchical.py  test_integration.py  test_pipeline.py  (+1 more)
(+197 files in other folders)
